--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,5 @@
   "name": "My Codespace",
   "image": "mcr.microsoft.com/devcontainers/base:ubuntu",
   "postCreateCommand": "bash .devcontainer/setup.sh",
-  "postStartCommand" : "npm run testnet-remote"
+  "postStartCommand" : "cd ballot-cli && npm run testnet-remote"
 }
